Pom cleanup